Centrado de contacto

--- a/index.html
+++ b/index.html
@@ -104,33 +104,35 @@
                     </div>
                 </div>
         </section>
-        
+
         <section class="portafolio">
             <h2 class="portafolio-title">Portafolio</h2>
             <div class="portafolio-container">
                 <div>
-                <img src="img/img1.jpg"/>
+                    <img src="img/img1.jpg" />
                 </div>
                 <div>
-                <img src="img/img2.jpg"/>
+                    <img src="img/img2.jpg" />
                 </div>
                 <div>
-                <img src="img/img3.jpg"/> 
-                </div>     
+                    <img src="img/img3.jpg" />
+                </div>
         </section>
 
         <section class="contacto">
-            <h2 class="contacto-tittle">Contacto</h2>
-            <div class="contacto_item">
-                <i class='bx bxs-phone-call'></i>
-                <span>Número Celular</span>
-            </div>
-            <div class="contacto_item">
-                <i class='bx bx-envelope'></i>
-                <span>Correo Electronico</span>
+            <h2 class="contacto-title">Contacto</h2>
+            <div class="contacto_container">
+                <div class="contacto_item">
+                    <i class='bx bxs-phone-call'></i>
+                    <span>Número Celular</span>
+                </div>
+                <div class="contacto_item">
+                    <i class='bx bx-envelope'></i>
+                    <span>Correo Electronico</span>
+                </div>
             </div>
         </section>
-        
+
 
     </main>
 </body>
