Cambio de fonde e imagenes de portafolio

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <h2 class="portafolio-title">Portafolio</h2>
             <div class="portafolio-container">
                 <div>
-                    <img src="img/img1.jpg" />
+                    <img src="img/freelancer.medium.webp" />
                 </div>
                 <div>
-                    <img src="img/img2.jpg" />
+                    <img src="img/sb-admin-pro-angular.medium.webp" />
                 </div>
                 <div>
-                    <img src="img/img3.jpg" />
+                    <img src="img/sb-ui-kit-pro.medium.webp" />
                 </div>
         </section>
 
