Alineacion de fix nav

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 <body>
     <header class="hero">
         <div class="hero_navbar">
-            <a href="#">Home</a>
-            <a href="#">Acerca de mi</a>
-            <a href="#">Mis Habilidades</a>
-            <a href="#">Experiencia</a>
-            <a href="#">Portafolio</a>
-            <a href="#">Contacto</a>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Acerca de mi</a>
+                <a href="#">Mis Habilidades</a>
+                <a href="#">Experiencia</a>
+                <a href="#">Portafolio</a>
+                <a href="#">Contacto</a>
+            </nav>
         </div>
         <div class="hero_container">
             <div class="hero_img-container">
