--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="hero_img-container">
                 <img src="img/IMG_3442.jpg" alt="imagen de perfil">
             </div>
-            <div class="hero-info">
-                <h1>Mobile App Designer</h1>
+            <div class="hero_info">
                 <h2>Hola Soy Liz Gutierrez</h2>
+                <h1>Mobile App Designer</h1>
                 <div class="hero_social">
                     <a href="#">
                         <i class='bx bxl-instagram'></i>
@@ -45,14 +45,14 @@
     </header>
     <main class="wrapper">
         <section class="about">
-            <h2 class="about_tittle">Acerca de mi</h2>
+            <h2 class="title">Acerca de mi</h2>
             <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, vel reiciendis
                 reprehenderit quae distinctio corporis doloremque, quisquam autem repudiandae explicabo maiores numquam
                 quas nam cupiditate nesciunt veritatis expedita, culpa aspernatur?</p>
         </section>
 
         <section class="skills">
-            <h2 class="skills-title">Mis Habilidades</h2>
+            <h2 class="title">Mis Habilidades</h2>
             <div class="skills_container">
                 <div class="skill_item">
                     <i class='bx bx-mobile-alt'></i>
@@ -77,7 +77,7 @@
         </section>
 
         <section class="experience">
-            <h2 class="experience-title">Experiencia</h2>
+            <h2 class="title">Experiencia</h2>
             <div class="experience_container">
                 <div class="experience_item">
                     <div class="experience_years">
@@ -108,7 +108,7 @@
         </section>
 
         <section class="portafolio">
-            <h2 class="portafolio-title">Portafolio</h2>
+            <h2 class="title">Portafolio</h2>
             <div class="portafolio-container">
                 <div>
                     <img src="img/freelancer.medium.webp" />
@@ -122,7 +122,7 @@
         </section>
 
         <section class="contacto">
-            <h2 class="contacto-title">Contacto</h2>
+            <h2 class="title">Contacto</h2>
             <div class="contacto_container">
                 <div class="contacto_item">
                     <i class='bx bxs-phone-call'></i>
